...
            crossAxisAlignment: CrossAxisAlignment.stretch,
            children: <Widget>[
              if (summaries.isEmpty)
                const Padding(
                  padding: EdgeInsets.symmetric(vertical: 4),
                  child: Text(
                    'Tap any widget in the app',
                    style: TextStyle(fontSize: 11),
                  ),
                ),
              for (final summary in summaries)
                ListTile(
                  dense: true,
...
